--- a/slides/chapter-1-significance.Rmd
+++ b/slides/chapter-1-significance.Rmd
@@ -1342,12 +1342,15 @@ ggplot(tbl, aes(x = x)) +
   scale_fill_discrete(guide = F) + 
   scale_x_continuous("Proportion", breaks = (0:10)/10, limits = c(0,1)) + 
   theme(axis.title.y = element_blank(), axis.text.y = element_blank(), axis.ticks.y = element_blank())
+
+one_sided <- sprintf("$p=%.2f$", tbl %>% filter(type == "One Sided") %>% `[[`("extreme") %>% mean(na.rm = T))
+two_sided <- sprintf("$p=%.2f$", tbl %>% filter(type == "Two Sided") %>% `[[`("extreme") %>% mean(na.rm = T))
 ```
 - There are 100 dots. To find the p-value, we count the dots which are as or more extreme than what we observed (0.8)
 
-- For a 1-sided test of whether we observed more heads (0.8, 0.9, and 1.0), $p=0.03$
+- For a 1-sided test of whether we observed more heads (0.8, 0.9, and 1.0), `r one_sided`
 
-- For a 2-sided test of whether the coin is fair (0.8, 0.9, 1.0, and 0.2, 0.1, 0.0), $p=0.07$
+- For a 2-sided test of whether the coin is fair (0.8, 0.9, 1.0, and 0.2, 0.1, 0.0), `r two_sided`
 
 ---
 class:center,middle,inverse
